<!-- res/layout/activity_start.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_marginTop="48dp"
        android:text="@string/mi_filmoteca"
        android:textSize="28sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnVerListado"
        android:layout_marginTop="32dp"
        android:text="@string/ver_listado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_marginTop="12dp"
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_marginTop="12dp"
        android:text="@string/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
